--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,10 +1,11 @@
 head
     link(rel="stylesheet", href="bootstrap.min.css")
     link(rel="stylesheet", href="bootstrap-theme.css")
+    link(rel="stylesheet", href="font-awesome.min.css")
     link(rel="stylesheet", href="styles.css")
     meta(name="viewport" content="width=device-width, initial-scale=1")
 body
-    nav.navbar.navbar-default
+    .navbar.navbar-default
         a.navbar-brand
             | Project 1
         ul.nav.navbar-nav
@@ -20,6 +21,6 @@ body
     .container-fluid
         .row
             block content
-
     script(type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js")
     script(type="text/javascript" src="bootstrap.js")
+    script(type="text/javascript" src="app.min.js")
