--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,22 +5,27 @@ head
     link(rel="stylesheet", href="styles.css")
     meta(name="viewport" content="width=device-width, initial-scale=1")
 body
-    .navbar.navbar-default
-        a.navbar-brand
-            | Project 1
-        ul.nav.navbar-nav
-            li.nav-item
-                a.nav-link(href="index.html")
-                    | Home
-            li.nav-item
-                a.nav-link(href="register.html")
-                    | Register
-            li.nav-item
-                a.nav-link(href="createevent.html")
-                    | Create Event
+    nav.navbar.navbar-inverse.navbar-fixed-top
+        .container
+            .navbar-header
+                button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
+                    span.sr-only Toggle navigation
+                    span.icon-bar
+                    span.icon-bar
+                    span.icon-bar
+                a.navbar-brand(href='#') SrWebDevPrj1
+            #navbar.collapse.navbar-collapse
+                ul.nav.navbar-nav
+                    li.active
+                        a(href='index.html') Home
+                    li
+                        a(href='register.html') Register
+                    li
+                        a(href='createevent.html') Create Event
     .container-fluid
-        .row
+        .row.bottom-push
             block content
+
     script(type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js")
     script(type="text/javascript" src="bootstrap.js")
     script(type="text/javascript" src="app.min.js")
